Fixed overflow issues and responsive element sizing in general

--- a/src/pages/module-page/modulePage.css
+++ b/src/pages/module-page/modulePage.css
@@ -22,9 +22,6 @@
     width: 100%;
     overflow: hidden;
   }
-  
-  @media (min-width: 800px) {
-    /* PC */
 
     .module-logo-bg{
         position:absolute;
@@ -180,11 +177,98 @@
       align-items: center;
       width: 100%;
     }
-    
-  }
+    @media (max-width: 1050px) {
+      
+      .module-logo-bg{
+        z-index: -2;
+        width: 300px;
+        top:90px;
+        position: absolute;
+      }
+      .module-title-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        position: relative;
+        top:30px;
+      }
+    #module-container {
+      padding-top: 40px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: black;
+      text-align: center;
+    }
+
+      #module-container h1 {
+        font-size: 3rem;
+        color: black;
+        padding: 0;
+        margin: 0;
+        top: 0;
+        left: 0;
+        
+      }
+      #module-container h2 {
+        font-size: x-large;
+        font-weight: 900;
+        color: black;
+      }
+      #module-container h3 {
+        font-size: large;
+        color: var(--color);
+        padding: 0 40px;
+      }
+      #module-container h4 {
+        font-size: large;
+        padding: 8% 10% 0 10%;
+        line-height: 150%;
+        margin-top: 40px;
+      }
+      
+      
+      #module-container .side-nav {
+        display:none;
+      }
+      .module-alt-nav {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        top: -10px;
+        position: absolute;
+        user-select:none;
+      }
+      .module-alt-nav-sides {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: x-large;
+        font-weight: 900;
+        background-color: var(--color);
+        width: 10%;
+        height: 80px;
+      }
   
-  @media (max-width: 800px) {
-    /* Smartphone */
-    
-  }
-  
+    }
+
+    @media (max-width: 340px) {
+      #module-container h1 {
+        font-size: 2rem;
+        color: black;
+        padding: 0;
+        margin: 0;
+        top: 0;
+        left: 0;
+        
+      }
+      #module-container h2 {
+        font-size: large;
+        font-weight: 900;
+        color: black;
+      }
+    }
