--- a/src/pages/volumen.css
+++ b/src/pages/volumen.css
@@ -24,11 +24,9 @@
   }
   
 
-  @media (min-width: 800px) {
+  @media (min-width: 1050px) {
     /* PC */
-    button a{
-        
-    }
+
     .logo-bg{
         position:absolute;
         z-index: -2;
@@ -181,7 +179,7 @@
     }
   }
   
-  @media (max-width: 800px) {
+  @media (max-width: 1050px) {
     /* Smartphone */
     .logo-bg{
         z-index: -2;
